Might work to get jsign going.